Cleaned up the DB code.  Updated Swagger docs. api now uses movies data from MongoDB.
